[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/CustomSpinBox.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ClmControls.gd" type="Script" id=2]
[ext_resource path="res://Theme/RemoveSpinBoxArrows.png" type="Texture" id=3]

[sub_resource type="Theme" id=1]
SpinBox/icons/updown = ExtResource( 3 )

[node name="ClmControls" type="ScrollContainer"]
margin_right = 220.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 220.0
margin_bottom = 624.0
size_flags_horizontal = 11
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 220.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 92.0
margin_bottom = 19.0
text = "Column index:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColumnIndexSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 170.0
margin_bottom = 24.0
max_value = 2047.0
rounded = true
script = ExtResource( 1 )

[node name="ColumnFirstUnusedButton" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 220.0
margin_bottom = 48.0
text = "Go to unused"

[node name="ColumnViewDeleteButton" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 220.0
margin_bottom = 72.0
hint_tooltip = "Set all data of the column at this index to 0"
size_flags_horizontal = 3
text = "Delete column"

[node name="ColumnDuplicateButton" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 220.0
margin_bottom = 96.0
hint_tooltip = "Set all data of the column at this index to 0"
size_flags_horizontal = 3
text = "Duplicate column"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 220.0
margin_bottom = 124.0

[node name="Label16" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
text = "Utilized"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UtilizedSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 146.0
margin_right = 220.0
margin_bottom = 24.0
size_flags_horizontal = 10
theme = SubResource( 1 )
max_value = 99999.0
editable = false
script = ExtResource( 1 )

[node name="Spacing" type="Control" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 220.0
margin_bottom = 152.0
rect_min_size = Vector2( 24, 24 )

[node name="GridSimpleValues" type="GridContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 220.0
margin_bottom = 404.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "Cube 8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube8SpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_right = 220.0
margin_bottom = 24.0
size_flags_horizontal = 10
max_value = 510.0
script = ExtResource( 1 )

[node name="Label9" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 33.0
margin_right = 82.0
margin_bottom = 47.0
text = "Cube 7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube7SpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_top = 28.0
margin_right = 220.0
margin_bottom = 52.0
size_flags_horizontal = 10
max_value = 510.0
script = ExtResource( 1 )

[node name="Label10" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 61.0
margin_right = 82.0
margin_bottom = 75.0
text = "Cube 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube6SpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_top = 56.0
margin_right = 220.0
margin_bottom = 80.0
size_flags_horizontal = 10
max_value = 510.0
script = ExtResource( 1 )

[node name="Label11" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 89.0
margin_right = 82.0
margin_bottom = 103.0
text = "Cube 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube5SpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_top = 84.0
margin_right = 220.0
margin_bottom = 108.0
size_flags_horizontal = 10
max_value = 510.0
script = ExtResource( 1 )

[node name="Label12" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 117.0
margin_right = 82.0
margin_bottom = 131.0
text = "Cube 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube4SpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_top = 112.0
margin_right = 220.0
margin_bottom = 136.0
size_flags_horizontal = 10
max_value = 510.0
script = ExtResource( 1 )

[node name="Label13" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 145.0
margin_right = 82.0
margin_bottom = 159.0
text = "Cube 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube3SpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_top = 140.0
margin_right = 220.0
margin_bottom = 164.0
size_flags_horizontal = 10
max_value = 510.0
script = ExtResource( 1 )

[node name="Label14" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 173.0
margin_right = 82.0
margin_bottom = 187.0
text = "Cube 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube2SpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_top = 168.0
margin_right = 220.0
margin_bottom = 192.0
size_flags_horizontal = 10
max_value = 510.0
script = ExtResource( 1 )

[node name="Label15" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 201.0
margin_right = 82.0
margin_bottom = 215.0
text = "Cube 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube1SpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_top = 196.0
margin_right = 220.0
margin_bottom = 220.0
size_flags_horizontal = 10
max_value = 510.0
script = ExtResource( 1 )

[node name="Label6" type="Label" parent="VBoxContainer/GridSimpleValues"]
margin_top = 229.0
margin_right = 82.0
margin_bottom = 243.0
text = "Floor texture"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorTextureSpinBox" type="SpinBox" parent="VBoxContainer/GridSimpleValues"]
margin_left = 146.0
margin_top = 224.0
margin_right = 220.0
margin_bottom = 248.0
size_flags_horizontal = 10
max_value = 999.0
script = ExtResource( 1 )

[node name="CheckboxShowAll" type="CheckBox" parent="VBoxContainer"]
margin_top = 408.0
margin_right = 220.0
margin_bottom = 432.0
rect_min_size = Vector2( 24, 24 )
text = "Show all"

[node name="GridAdvancedValues" type="GridContainer" parent="VBoxContainer"]
margin_top = 436.0
margin_right = 220.0
margin_bottom = 572.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="VBoxContainer/GridAdvancedValues"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightSpinBox" type="SpinBox" parent="VBoxContainer/GridAdvancedValues"]
margin_left = 146.0
margin_right = 220.0
margin_bottom = 24.0
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label7" type="Label" parent="VBoxContainer/GridAdvancedValues"]
margin_top = 33.0
margin_right = 73.0
margin_bottom = 47.0
text = "Solid mask"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SolidMaskSpinBox" type="SpinBox" parent="VBoxContainer/GridAdvancedValues"]
margin_left = 146.0
margin_top = 28.0
margin_right = 220.0
margin_bottom = 52.0
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label3" type="Label" parent="VBoxContainer/GridAdvancedValues"]
margin_top = 61.0
margin_right = 73.0
margin_bottom = 75.0
text = "Permanent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PermanentSpinBox" type="SpinBox" parent="VBoxContainer/GridAdvancedValues"]
margin_left = 146.0
margin_top = 56.0
margin_right = 220.0
margin_bottom = 80.0
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="VBoxContainer/GridAdvancedValues"]
margin_top = 89.0
margin_right = 73.0
margin_bottom = 103.0
text = "Orientation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrientationSpinBox" type="SpinBox" parent="VBoxContainer/GridAdvancedValues"]
margin_left = 146.0
margin_top = 84.0
margin_right = 220.0
margin_bottom = 108.0
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[node name="Label4" type="Label" parent="VBoxContainer/GridAdvancedValues"]
margin_top = 117.0
margin_right = 73.0
margin_bottom = 131.0
text = "Lintel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LintelSpinBox" type="SpinBox" parent="VBoxContainer/GridAdvancedValues"]
margin_left = 146.0
margin_top = 112.0
margin_right = 220.0
margin_bottom = 136.0
size_flags_horizontal = 10
max_value = 99999.0
script = ExtResource( 1 )

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/ColumnIndexSpinBox" to="." method="_on_ColumnIndexSpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/ColumnFirstUnusedButton" to="." method="_on_ColumnFirstUnusedButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ColumnViewDeleteButton" to="." method="_on_ColumnViewDeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ColumnDuplicateButton" to="." method="_on_ColumnDuplicateButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/UtilizedSpinBox" to="." method="_on_UtilizedSpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridSimpleValues/FloorTextureSpinBox" to="." method="_on_FloorTextureSpinBox_value_changed"]
[connection signal="toggled" from="VBoxContainer/CheckboxShowAll" to="." method="_on_CheckboxShowAll_toggled"]
[connection signal="value_changed" from="VBoxContainer/GridAdvancedValues/HeightSpinBox" to="." method="_on_HeightSpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridAdvancedValues/SolidMaskSpinBox" to="." method="_on_SolidMaskSpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridAdvancedValues/PermanentSpinBox" to="." method="_on_PermanentSpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridAdvancedValues/OrientationSpinBox" to="." method="_on_OrientationSpinBox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridAdvancedValues/LintelSpinBox" to="." method="_on_LintelSpinBox_value_changed"]
